src/components/Headbar/Headbar.module.css
.main {
  display: flex;
  background-color: rgb(255, 255, 255);
  height: 102px;
  width: 100wh;
  color: #333333;
  padding: 0 135px 0 135px;

  /* -webkit-box-shadow: 0px -1px 12px 10px rgba(0, 0, 0, 0.58);
  -moz-box-shadow: 0px -1px 12px 10px rgba(0, 0, 0, 0.58);
  box-shadow: 0px -1px 12px 10px rgba(0, 0, 0, 0.58); */
}

.conLogo {
  width: 70px;
}

.mainlink {
  font-family: "TT Hoves";
  font-size: 12px;
  font-weight: 400;
  line-height: 12px;
  letter-spacing: 0.2em;
  text-align: left;
  margin-right: 60px;

  cursor: pointer;

  padding: 20px;
  border-top: 5px solid #33333300;
  border-bottom: 5px solid #33333300;

  transition: all 0.3s ease-in-out;
  padding-left: 0;
  padding-right: 0;
}

.conLinks {
  display: flex;
  flex-direction: row;
  margin-left: 330px;
  align-items: center;
}

.mainlink:hover {
  padding: 5px 0;
  border-top: 1px solid #333333;
  border-bottom: 1px solid #333333;
}

